[Feat] 문명 선택 시 고유 유닛 출력